# smeagol

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
docs/content/: _config.yml  _toc.yml  conf.py  index.rst  install.md  install.rst  intro.md
src/smeagol/: __init__.py  smeagol.py
