[metadata]
name = SMEAGOL
author = Nolan E. MacDonald
author_email = nolanemacdonald@gmail.com
description = Social Media Engagement Activity for Generating Optimized Logistics (SMEAGOL)
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords =
    smeagol
    python
    social media
    twitter
    spotify
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/nemacdonald/smeagol
project_urls =
    Bug Tracker = https://github.com/nemacdonald/smeagol/issues